# tuz-lang

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
examples/: fibonacci.tz  hello.tz  loops.tz  point.tz
include/tuz/: ast.h  codegen.h  diagnostic.h  lexer.h  resolver.h  token.h  type.h
src/: ast.cpp  codegen.cpp  diagnostic.cpp  driver.cpp  lexer.cpp  parser.cpp  resolver.cpp  token.cpp  type.cpp
tests/: test_diagnostic.cpp  test_framework.h  test_integration.cpp
